--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: sans-serif; background: #fff; color: #111; overflow-x: hidden; }
-    .slide img {
-      display: block;
-      width: 100%;
-      max-width: 100%;
-      height: auto;
-    }
-    .slide {
-      width: 100%;
-      margin-bottom: 2rem;
-    }
+    .slide img { width: 100%; height: auto; display: block; }
+    .slide { margin-bottom: 2rem; }
     .cta {
       position: fixed;
       bottom: 20px;
@@ -29,49 +21,45 @@
       text-decoration: none;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       z-index: 1000;
-      transition: background 0.3s ease;
     }
-    .cta:hover {
-      background: #444;
-    }
+    .cta:hover { background: #444; }
   </style>
 </head>
 <body>
 
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0001.jpg" alt="Slide 1"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0002.jpg" alt="Slide 2"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0003.jpg" alt="Slide 3"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0004.jpg" alt="Slide 4"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0005.jpg" alt="Slide 5"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0006.jpg" alt="Slide 6"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0007.jpg" alt="Slide 7"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0008.jpg" alt="Slide 8"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0009.jpg" alt="Slide 9"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0010.jpg" alt="Slide 10"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0011.jpg" alt="Slide 11"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0012.jpg" alt="Slide 12"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0013.jpg" alt="Slide 13"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0014.jpg" alt="Slide 14"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0015.jpg" alt="Slide 15"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0016.jpg" alt="Slide 16"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0017.jpg" alt="Slide 17"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0018.jpg" alt="Slide 18"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0019.jpg" alt="Slide 19"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0020.jpg" alt="Slide 20"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0021.jpg" alt="Slide 21"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0022.jpg" alt="Slide 22"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0023.jpg" alt="Slide 23"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0024.jpg" alt="Slide 24"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0025.jpg" alt="Slide 25"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0026.jpg" alt="Slide 26"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0027.jpg" alt="Slide 27"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0028.jpg" alt="Slide 28"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0029.jpg" alt="Slide 29"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0030.jpg" alt="Slide 30"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0031.jpg" alt="Slide 31"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0032.jpg" alt="Slide 32"></section>
-<section class="slide"><img src="TWC_Overview_Final 11.16.32 AM_page-0033.jpg" alt="Slide 33"></section>
-
+<section class="slide"><img src="slide1.jpg" alt="Slide 1"></section>
+<section class="slide"><img src="slide2.jpg" alt="Slide 2"></section>
+<section class="slide"><img src="slide3.jpg" alt="Slide 3"></section>
+<section class="slide"><img src="slide4.jpg" alt="Slide 4"></section>
+<section class="slide"><img src="slide5.jpg" alt="Slide 5"></section>
+<section class="slide"><img src="slide6.jpg" alt="Slide 6"></section>
+<section class="slide"><img src="slide7.jpg" alt="Slide 7"></section>
+<section class="slide"><img src="slide8.jpg" alt="Slide 8"></section>
+<section class="slide"><img src="slide9.jpg" alt="Slide 9"></section>
+<section class="slide"><img src="slide10.jpg" alt="Slide 10"></section>
+<section class="slide"><img src="slide11.jpg" alt="Slide 11"></section>
+<section class="slide"><img src="slide12.jpg" alt="Slide 12"></section>
+<section class="slide"><img src="slide13.jpg" alt="Slide 13"></section>
+<section class="slide"><img src="slide14.jpg" alt="Slide 14"></section>
+<section class="slide"><img src="slide15.jpg" alt="Slide 15"></section>
+<section class="slide"><img src="slide16.jpg" alt="Slide 16"></section>
+<section class="slide"><img src="slide17.jpg" alt="Slide 17"></section>
+<section class="slide"><img src="slide18.jpg" alt="Slide 18"></section>
+<section class="slide"><img src="slide19.jpg" alt="Slide 19"></section>
+<section class="slide"><img src="slide20.jpg" alt="Slide 20"></section>
+<section class="slide"><img src="slide21.jpg" alt="Slide 21"></section>
+<section class="slide"><img src="slide22.jpg" alt="Slide 22"></section>
+<section class="slide"><img src="slide23.jpg" alt="Slide 23"></section>
+<section class="slide"><img src="slide24.jpg" alt="Slide 24"></section>
+<section class="slide"><img src="slide25.jpg" alt="Slide 25"></section>
+<section class="slide"><img src="slide26.jpg" alt="Slide 26"></section>
+<section class="slide"><img src="slide27.jpg" alt="Slide 27"></section>
+<section class="slide"><img src="slide28.jpg" alt="Slide 28"></section>
+<section class="slide"><img src="slide29.jpg" alt="Slide 29"></section>
+<section class="slide"><img src="slide30.jpg" alt="Slide 30"></section>
+<section class="slide"><img src="slide31.jpg" alt="Slide 31"></section>
+<section class="slide"><img src="slide32.jpg" alt="Slide 32"></section>
+<section class="slide"><img src="slide33.jpg" alt="Slide 33"></section>
 
 <a href="mailto:srishti.bhatia@tippleworks.com" class="cta">Let’s Create →</a>
 
