Updated Let’s Create button to Gmail and removed Email Now

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 <section class="slide"><img src="slide32.jpg" alt="Slide 32"></section>
 <section class="slide"><img src="slide33.jpg" alt="Slide 33"></section>
 
-<a href="mailto:srishti.bhatia@tippleworks.com" class="cta">Let’s Create →</a>
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Let’s Create →</a>
+
 
 
 <!-- Floating Instagram Icon -->
@@ -84,8 +85,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" width="40" height="40" alt="Instagram" />
 </a>
 
-<!-- Email Now Button -->
-<a href="mailto:rohan.dhirwani@tippleworks.com" class="cta" style="bottom:80px;background:#f04;">Email Now</a>
+
 
 <!-- Back to Top -->
 <a href="#" class="cta" style="bottom:140px;background:#333;">↑ Top</a>
