--- a/index.html
+++ b/index.html
@@ -4,14 +4,48 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tipple Works Co. Deck</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png" />
+
+  <!-- SEO & Social Preview -->
+  <meta name="description" content="Tipple Works Co. - Creative alcohol marketing agency">
+  <meta property="og:title" content="Tipple Works Co.">
+  <meta property="og:description" content="Explore our creative deck showcasing what Tipple Works Co. does best – elevating alcohol brands.">
+  <meta property="og:image" content="https://tippleworks.com/slide1.jpg">
+  <meta property="og:url" content="https://tippleworks.com">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: sans-serif; background: #fff; color: #111; overflow-x: hidden; }
-    .slide img { width: 100%; height: auto; display: block; }
-    .slide { margin-bottom: 2rem; }
+
+    .slide {
+      margin-bottom: 2rem;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.6s ease-out;
+    }
+
+    .slide img {
+      width: 100%;
+      height: auto;
+      display: block;
+      loading: lazy;
+    }
+
     .cta {
       position: fixed;
-      bottom: 20px;
+      bottom: 40px;
       right: 20px;
       background: #000;
       color: #fff;
@@ -22,73 +56,86 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       z-index: 1000;
     }
+
     .cta:hover { background: #444; }
+
+    .back-to-top {
+      position: fixed;
+      bottom: 100px;
+      right: 20px;
+      background: #333;
+      color: #fff;
+      padding: 0.8rem 1.2rem;
+      border-radius: 40px;
+      text-decoration: none;
+      font-size: 14px;
+      z-index: 999;
+    }
+
+    .back-to-top:hover {
+      background: #555;
+    }
+
+    .instagram-btn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 999;
+    }
+
+    .instagram-btn img {
+      width: 40px;
+      height: 40px;
+    }
   </style>
-
-  <meta name="description" content="Tipple Works Co. - Creative alcohol marketing agency">
-  <meta property="og:title" content="Tipple Works Co.">
-  <meta property="og:description" content="Explore our creative deck showcasing what Tipple Works Co. does best – elevating alcohol brands.">
-  <meta property="og:image" content="https://tippleworks.com/slide1.jpg">
-  <meta property="og:url" content="https://tippleworks.com">
-  <meta name="twitter:card" content="summary_large_image">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
-  </script>
-
 </head>
 <body>
 
-<section class="slide"><img src="slide1.jpg" alt="Slide 1"></section>
-<section class="slide"><img src="slide2.jpg" alt="Slide 2"></section>
-<section class="slide"><img src="slide3.jpg" alt="Slide 3"></section>
-<section class="slide"><img src="slide4.jpg" alt="Slide 4"></section>
-<section class="slide"><img src="slide5.jpg" alt="Slide 5"></section>
-<section class="slide"><img src="slide6.jpg" alt="Slide 6"></section>
-<section class="slide"><img src="slide7.jpg" alt="Slide 7"></section>
-<section class="slide"><img src="slide8.jpg" alt="Slide 8"></section>
-<section class="slide"><img src="slide9.jpg" alt="Slide 9"></section>
-<section class="slide"><img src="slide10.jpg" alt="Slide 10"></section>
-<section class="slide"><img src="slide11.jpg" alt="Slide 11"></section>
-<section class="slide"><img src="slide12.jpg" alt="Slide 12"></section>
-<section class="slide"><img src="slide13.jpg" alt="Slide 13"></section>
-<section class="slide"><img src="slide14.jpg" alt="Slide 14"></section>
-<section class="slide"><img src="slide15.jpg" alt="Slide 15"></section>
-<section class="slide"><img src="slide16.jpg" alt="Slide 16"></section>
-<section class="slide"><img src="slide17.jpg" alt="Slide 17"></section>
-<section class="slide"><img src="slide18.jpg" alt="Slide 18"></section>
-<section class="slide"><img src="slide19.jpg" alt="Slide 19"></section>
-<section class="slide"><img src="slide20.jpg" alt="Slide 20"></section>
-<section class="slide"><img src="slide21.jpg" alt="Slide 21"></section>
-<section class="slide"><img src="slide22.jpg" alt="Slide 22"></section>
-<section class="slide"><img src="slide23.jpg" alt="Slide 23"></section>
-<section class="slide"><img src="slide24.jpg" alt="Slide 24"></section>
-<section class="slide"><img src="slide25.jpg" alt="Slide 25"></section>
-<section class="slide"><img src="slide26.jpg" alt="Slide 26"></section>
-<section class="slide"><img src="slide27.jpg" alt="Slide 27"></section>
-<section class="slide"><img src="slide28.jpg" alt="Slide 28"></section>
-<section class="slide"><img src="slide29.jpg" alt="Slide 29"></section>
-<section class="slide"><img src="slide30.jpg" alt="Slide 30"></section>
-<section class="slide"><img src="slide31.jpg" alt="Slide 31"></section>
-<section class="slide"><img src="slide32.jpg" alt="Slide 32"></section>
-<section class="slide"><img src="slide33.jpg" alt="Slide 33"></section>
+<!-- Slides -->
+<section class="slide"><img src="slide1.jpg" alt="Slide 1" loading="lazy" /></section>
+<section class="slide"><img src="slide2.jpg" alt="Slide 2" loading="lazy" /></section>
+<section class="slide"><img src="slide3.jpg" alt="Slide 3" loading="lazy" /></section>
+<section class="slide"><img src="slide4.jpg" alt="Slide 4" loading="lazy" /></section>
+<section class="slide"><img src="slide5.jpg" alt="Slide 5" loading="lazy" /></section>
+<section class="slide"><img src="slide6.jpg" alt="Slide 6" loading="lazy" /></section>
+<section class="slide"><img src="slide7.jpg" alt="Slide 7" loading="lazy" /></section>
+<section class="slide"><img src="slide8.jpg" alt="Slide 8" loading="lazy" /></section>
+<section class="slide"><img src="slide9.jpg" alt="Slide 9" loading="lazy" /></section>
+<section class="slide"><img src="slide10.jpg" alt="Slide 10" loading="lazy" /></section>
+<section class="slide"><img src="slide11.jpg" alt="Slide 11" loading="lazy" /></section>
+<section class="slide"><img src="slide12.jpg" alt="Slide 12" loading="lazy" /></section>
+<section class="slide"><img src="slide13.jpg" alt="Slide 13" loading="lazy" /></section>
+<section class="slide"><img src="slide14.jpg" alt="Slide 14" loading="lazy" /></section>
+<section class="slide"><img src="slide15.jpg" alt="Slide 15" loading="lazy" /></section>
+<section class="slide"><img src="slide16.jpg" alt="Slide 16" loading="lazy" /></section>
+<section class="slide"><img src="slide17.jpg" alt="Slide 17" loading="lazy" /></section>
+<section class="slide"><img src="slide18.jpg" alt="Slide 18" loading="lazy" /></section>
+<section class="slide"><img src="slide19.jpg" alt="Slide 19" loading="lazy" /></section>
+<section class="slide"><img src="slide20.jpg" alt="Slide 20" loading="lazy" /></section>
+<section class="slide"><img src="slide21.jpg" alt="Slide 21" loading="lazy" /></section>
+<section class="slide"><img src="slide22.jpg" alt="Slide 22" loading="lazy" /></section>
+<section class="slide"><img src="slide23.jpg" alt="Slide 23" loading="lazy" /></section>
+<section class="slide"><img src="slide24.jpg" alt="Slide 24" loading="lazy" /></section>
+<section class="slide"><img src="slide25.jpg" alt="Slide 25" loading="lazy" /></section>
+<section class="slide"><img src="slide26.jpg" alt="Slide 26" loading="lazy" /></section>
+<section class="slide"><img src="slide27.jpg" alt="Slide 27" loading="lazy" /></section>
+<section class="slide"><img src="slide28.jpg" alt="Slide 28" loading="lazy" /></section>
+<section class="slide"><img src="slide29.jpg" alt="Slide 29" loading="lazy" /></section>
+<section class="slide"><img src="slide30.jpg" alt="Slide 30" loading="lazy" /></section>
+<section class="slide"><img src="slide31.jpg" alt="Slide 31" loading="lazy" /></section>
+<section class="slide"><img src="slide32.jpg" alt="Slide 32" loading="lazy" /></section>
+<section class="slide"><img src="slide33.jpg" alt="Slide 33" loading="lazy" /></section>
 
+<!-- CTA Gmail -->
 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Let’s Create →</a>
 
-
-
-<!-- Floating Instagram Icon -->
-<a href="https://www.instagram.com/tippleworksco/" target="_blank" style="position:fixed;top:20px;right:20px;z-index:999;">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" width="40" height="40" alt="Instagram" />
+<!-- Instagram Floating -->
+<a class="instagram-btn" href="https://www.instagram.com/tippleworksco/" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
 </a>
 
-
-
 <!-- Back to Top -->
-<a href="#" class="cta" style="bottom:140px;background:#333;">↑ Top</a>
+<a href="#" class="back-to-top">↑ Top</a>
 
 <!-- Scroll Animations -->
 <script>
@@ -103,9 +150,6 @@
   }, { threshold: 0.1 });
 
   slides.forEach(slide => {
-    slide.style.opacity = 0;
-    slide.style.transform = 'translateY(30px)';
-    slide.style.transition = 'all 0.6s ease-out';
     observer.observe(slide);
   });
 </script>
