--- a/index.html
+++ b/index.html
@@ -153,6 +153,17 @@
     observer.observe(slide);
   });
 </script>
+<!-- Contact Form -->
+<form action="https://formspree.io/f/xrpbrrrj" method="POST" style="padding: 2rem; max-width: 500px; margin: 3rem auto; font-family: sans-serif;">
+  <h2 style="margin-bottom: 1rem;">Get in Touch</h2>
+  <label>Your Email:<br>
+    <input type="email" name="email" required style="width: 100%; padding: 10px; margin-top: 5px; margin-bottom: 1rem;">
+  </label><br>
+  <label>Your Message:<br>
+    <textarea name="message" required style="width: 100%; padding: 10px; height: 120px; margin-top: 5px;"></textarea>
+  </label><br><br>
+  <button type="submit" style="padding: 10px 20px; background: #000; color: #fff; border: none; cursor: pointer;">Send</button>
+</form>
 
 </body>
 </html>
