--- a/index.html
+++ b/index.html
@@ -164,6 +164,22 @@
   </label><br><br>
   <button type="submit" style="padding: 10px 20px; background: #000; color: #fff; border: none; cursor: pointer;">Send</button>
 </form>
+<section id="contact" style="padding: 2rem; background: #f8f8f8;">
+  <h2 style="margin-bottom: 1rem;">Let’s Talk</h2>
+  <form action="https://formspree.io/f/myzellok" method="POST" style="max-width: 500px;">
+    <label>
+      Your email:<br>
+      <input type="email" name="email" required style="width: 100%; margin-bottom: 1rem; padding: 0.5rem;">
+    </label><br>
+    <label>
+      Your message:<br>
+      <textarea name="message" required style="width: 100%; height: 150px; padding: 0.5rem;"></textarea>
+    </label><br>
+    <button type="submit" style="margin-top: 1rem; background: black; color: white; padding: 0.75rem 1.5rem; border: none; border-radius: 4px;">
+      Send →
+    </button>
+  </form>
+</section>
 
 </body>
 </html>
