New nav bar and older version

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tipple Works Co. Deck</title>
 
-  <!-- Google Analytics -->
+  <!-- ✅ Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSZN4E7TRS"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -33,7 +33,7 @@
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.9);
+      background: rgba(0, 0, 0, 0.85);
       color: white;
       padding: 1rem 2rem;
       display: flex;
@@ -45,8 +45,8 @@
     nav .logo {
       font-weight: bold;
       font-size: 1.2rem;
-      letter-spacing: 1px;
       text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     nav .nav-links {
@@ -125,18 +125,10 @@
       height: 40px;
     }
 
-    section#contact, section#services {
-      padding: 3rem 2rem;
+    section#contact {
+      padding: 2rem;
       background: #f8f8f8;
-      scroll-margin-top: 90px;
-    }
-
-    section#services {
-      background: #fefefe;
-    }
-
-    h2 {
-      margin-bottom: 1rem;
+      scroll-margin-top: 80px;
     }
   </style>
 </head>
@@ -146,45 +138,47 @@
 <nav>
   <div class="logo">Tipple Works</div>
   <div class="nav-links">
-    <a href="#top">Home</a>
-    <a href="#work">Work</a>
-    <a href="#services">Services</a>
-    <a href="#contact">Let’s Talk</a>
+    <a href="#contact">Contact</a>
+    <a href="#top">Top</a>
+    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" target="_blank">Email</a>
     <a href="https://www.instagram.com/tippleworksco/" target="_blank">Instagram</a>
   </div>
 </nav>
 
-<!-- ✅ SLIDES -->
-<div id="work">
-  <section class="slide"><img src="slide1.jpg" alt="Slide 1" loading="lazy" /></section>
-  <section class="slide"><img src="slide2.jpg" alt="Slide 2" loading="lazy" /></section>
-  <section class="slide"><img src="slide3.jpg" alt="Slide 3" loading="lazy" /></section>
-  <section class="slide"><img src="slide4.jpg" alt="Slide 4" loading="lazy" /></section>
-  <section class="slide"><img src="slide5.jpg" alt="Slide 5" loading="lazy" /></section>
-  <!-- add remaining slides similarly... -->
-</div>
-
-<!-- ✅ SERVICES SECTION -->
-<section id="services">
-  <h2>What We Do</h2>
-  <p>We specialize in alcohol marketing with services across branding, performance, influencer outreach, packaging, content & more. This section can be enhanced visually.</p>
-</section>
-
-<!-- ✅ CONTACT FORM -->
-<section id="contact">
-  <h2>Let’s Talk</h2>
-  <form action="https://formspree.io/f/myzellok" method="POST" style="max-width: 500px;">
-    <label>Your email:<br>
-      <input type="email" name="email" required style="width: 100%; margin-bottom: 1rem; padding: 0.5rem;">
-    </label><br>
-    <label>Your message:<br>
-      <textarea name="message" required style="width: 100%; height: 150px; padding: 0.5rem;"></textarea>
-    </label><br>
-    <button type="submit" style="margin-top: 1rem; background: black; color: white; padding: 0.75rem 1.5rem; border: none; border-radius: 4px;">
-      Send →
-    </button>
-  </form>
-</section>
+<!-- ✅ Slides -->
+<section class="slide"><img src="slide1.jpg" alt="Slide 1" loading="lazy" /></section>
+<section class="slide"><img src="slide2.jpg" alt="Slide 2" loading="lazy" /></section>
+<section class="slide"><img src="slide3.jpg" alt="Slide 3" loading="lazy" /></section>
+<section class="slide"><img src="slide4.jpg" alt="Slide 4" loading="lazy" /></section>
+<section class="slide"><img src="slide5.jpg" alt="Slide 5" loading="lazy" /></section>
+<section class="slide"><img src="slide6.jpg" alt="Slide 6" loading="lazy" /></section>
+<section class="slide"><img src="slide7.jpg" alt="Slide 7" loading="lazy" /></section>
+<section class="slide"><img src="slide8.jpg" alt="Slide 8" loading="lazy" /></section>
+<section class="slide"><img src="slide9.jpg" alt="Slide 9" loading="lazy" /></section>
+<section class="slide"><img src="slide10.jpg" alt="Slide 10" loading="lazy" /></section>
+<section class="slide"><img src="slide11.jpg" alt="Slide 11" loading="lazy" /></section>
+<section class="slide"><img src="slide12.jpg" alt="Slide 12" loading="lazy" /></section>
+<section class="slide"><img src="slide13.jpg" alt="Slide 13" loading="lazy" /></section>
+<section class="slide"><img src="slide14.jpg" alt="Slide 14" loading="lazy" /></section>
+<section class="slide"><img src="slide15.jpg" alt="Slide 15" loading="lazy" /></section>
+<section class="slide"><img src="slide16.jpg" alt="Slide 16" loading="lazy" /></section>
+<section class="slide"><img src="slide17.jpg" alt="Slide 17" loading="lazy" /></section>
+<section class="slide"><img src="slide18.jpg" alt="Slide 18" loading="lazy" /></section>
+<section class="slide"><img src="slide19.jpg" alt="Slide 19" loading="lazy" /></section>
+<section class="slide"><img src="slide20.jpg" alt="Slide 20" loading="lazy" /></section>
+<section class="slide"><img src="slide21.jpg" alt="Slide 21" loading="lazy" /></section>
+<section class="slide"><img src="slide22.jpg" alt="Slide 22" loading="lazy" /></section>
+<section class="slide"><img src="slide23.jpg" alt="Slide 23" loading="lazy" /></section>
+<section class="slide"><img src="slide24.jpg" alt="Slide 24" loading="lazy" /></section>
+<section class="slide"><img src="slide25.jpg" alt="Slide 25" loading="lazy" /></section>
+<section class="slide"><img src="slide26.jpg" alt="Slide 26" loading="lazy" /></section>
+<section class="slide"><img src="slide27.jpg" alt="Slide 27" loading="lazy" /></section>
+<section class="slide"><img src="slide28.jpg" alt="Slide 28" loading="lazy" /></section>
+<section class="slide"><img src="slide29.jpg" alt="Slide 29" loading="lazy" /></section>
+<section class="slide"><img src="slide30.jpg" alt="Slide 30" loading="lazy" /></section>
+<section class="slide"><img src="slide31.jpg" alt="Slide 31" loading="lazy" /></section>
+<section class="slide"><img src="slide32.jpg" alt="Slide 32" loading="lazy" /></section>
+<section class="slide"><img src="slide33.jpg" alt="Slide 33" loading="lazy" /></section>
 
 <!-- ✅ CTA Gmail -->
 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohan.dhirwani@tippleworks.com" class="cta" target="_blank">Let’s Create →</a>
@@ -197,7 +191,7 @@
 <!-- ✅ Back to Top -->
 <a href="#top" class="back-to-top">↑ Top</a>
 
-<!-- ✅ Slide Fade-In Scroll -->
+<!-- ✅ Scroll Animations -->
 <script>
   const slides = document.querySelectorAll('.slide');
   const observer = new IntersectionObserver(entries => {
@@ -213,6 +207,24 @@
     observer.observe(slide);
   });
 </script>
+
+<!-- ✅ Contact Form -->
+<section id="contact">
+  <h2 style="margin-bottom: 1rem;">Let’s Talk</h2>
+  <form action="https://formspree.io/f/myzellok" method="POST" style="max-width: 500px;">
+    <label>
+      Your email:<br>
+      <input type="email" name="email" required style="width: 100%; margin-bottom: 1rem; padding: 0.5rem;">
+    </label><br>
+    <label>
+      Your message:<br>
+      <textarea name="message" required style="width: 100%; height: 150px; padding: 0.5rem;"></textarea>
+    </label><br>
+    <button type="submit" style="margin-top: 1rem; background: black; color: white; padding: 0.75rem 1.5rem; border: none; border-radius: 4px;">
+      Send →
+    </button>
+  </form>
+</section>
 
 </body>
 </html>
