interactive services grid

--- a/index.html
+++ b/index.html
@@ -126,15 +126,50 @@
 </head>
 <body>
 
-<!-- ✅ Hero Section Replaces Slide 1 -->
+<!-- ✅ Hero Section -->
 <section class="hero">
   <h1>We Make Alcohol Brands Unmissable</h1>
   <p>From strategy to sizzle, Tipple Works builds alcohol brands that get people talking. Packaging, content, strategy, and experiences that pour creativity into every sip.</p>
   <a href="#contact">Let's Collaborate</a>
 </section>
 
-<!-- ✅ Slides from slide2 onwards -->
-<section class="slide"><img src="slide2.jpg" alt="Slide 2" loading="lazy" /></section>
+<!-- ✅ Services Section (Replaces Slide 2) -->
+<section id="services" style="padding: 4rem 2rem; background: #fff;">
+  <h2 style="text-align:center; font-size: 2rem; margin-bottom: 2.5rem;">What We Do</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1100px; margin: 0 auto;">
+
+    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
+         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
+         onmouseout="this.style.background='#000'; this.style.color='#fff';">
+      <h3 style="margin-bottom: 0.5rem;">Brand Strategy</h3>
+      <p style="font-size: 0.95rem;">Positioning, tone of voice, identity & messaging for alcohol brands.</p>
+    </div>
+
+    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
+         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
+         onmouseout="this.style.background='#000'; this.style.color='#fff';">
+      <h3 style="margin-bottom: 0.5rem;">Social Media</h3>
+      <p style="font-size: 0.95rem;">Reels, grid posts, campaigns, and strategy with consistent brand tone.</p>
+    </div>
+
+    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
+         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
+         onmouseout="this.style.background='#000'; this.style.color='#fff';">
+      <h3 style="margin-bottom: 0.5rem;">Packaging & Design</h3>
+      <p style="font-size: 0.95rem;">Bottle labels, packs, shelf-ready creative for modern alcohol brands.</p>
+    </div>
+
+    <div style="flex: 1 1 250px; background: #000; color: #fff; padding: 2rem; border-radius: 10px; transition: 0.3s ease; cursor: pointer;"
+         onmouseover="this.style.background='#f6c301'; this.style.color='#000';"
+         onmouseout="this.style.background='#000'; this.style.color='#fff';">
+      <h3 style="margin-bottom: 0.5rem;">Performance Marketing</h3>
+      <p style="font-size: 0.95rem;">Meta, Google, influencer & remarketing ads with end-to-end funnel design.</p>
+    </div>
+
+  </div>
+</section>
+
+<!-- ✅ Deck Slides (from Slide 3 onwards) -->
 <section class="slide"><img src="slide3.jpg" alt="Slide 3" loading="lazy" /></section>
 <section class="slide"><img src="slide4.jpg" alt="Slide 4" loading="lazy" /></section>
 <section class="slide"><img src="slide5.jpg" alt="Slide 5" loading="lazy" /></section>
