--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <a href="#contact">Let's Collaborate</a>
 </section>
 
-<!-- ✅ Services Section (Replaces Slide 2) -->
+<!-- ✅ Services Grid -->
 <section id="services" style="padding: 4rem 2rem; background: #fff;">
   <h2 style="text-align:center; font-size: 2rem; margin-bottom: 2.5rem;">What We Do</h2>
   <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; max-width: 1100px; margin: 0 auto;">
@@ -169,7 +169,19 @@
   </div>
 </section>
 
-<!-- ✅ Deck Slides (from Slide 3 onwards) -->
+<!-- ✅ Clients Section -->
+<section id="clients" style="padding: 4rem 2rem; background: #fafafa;">
+  <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">Brands We've Worked With</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 2rem; max-width: 1200px; margin: 0 auto;">
+    <img src="client1.png" alt="Client 1" style="height: 50px; max-width: 120px; object-fit: contain;">
+    <img src="client2.png" alt="Client 2" style="height: 50px; max-width: 120px; object-fit: contain;">
+    <img src="client3.png" alt="Client 3" style="height: 50px; max-width: 120px; object-fit: contain;">
+    <img src="client4.png" alt="Client 4" style="height: 50px; max-width: 120px; object-fit: contain;">
+    <img src="client5.png" alt="Client 5" style="height: 50px; max-width: 120px; object-fit: contain;">
+  </div>
+</section>
+
+<!-- ✅ Slides (from Slide 3 onwards) -->
 <section class="slide"><img src="slide3.jpg" alt="Slide 3" loading="lazy" /></section>
 <section class="slide"><img src="slide4.jpg" alt="Slide 4" loading="lazy" /></section>
 <section class="slide"><img src="slide5.jpg" alt="Slide 5" loading="lazy" /></section>
